classDiagram
direction LR

class User
class UserProfile
class Task
class TaskImage
class Application
class Order
class OrderStatusLog
class OrderMessage
class Notification
class Review
class Report
class FileRecord
class ReportEvidence

User "1" -- "1" UserProfile : has
User "1" -- "0..*" Task : publishes
Task "1" *-- "0..*" TaskImage : contains
Task "1" -- "0..*" Application : receives
User "1" -- "0..*" Application : submits
Task "1" -- "0..1" Order : generates
Order "1" *-- "1..*" OrderStatusLog : records
Order "1" *-- "0..*" OrderMessage : contains
Order "1" -- "0..*" Review : receives
User "1" -- "0..*" Notification : receives
User "1" -- "0..*" Report : submits
User "1" -- "0..*" FileRecord : uploads
Review "0..*" --> "1" User : reviewer/reviewee
Report "1" *-- "0..*" ReportEvidence : has evidence
ReportEvidence "0..*" --> "1" FileRecord : file
Report ..> Task : target
Report ..> User : target
